change friends list return value to UserResponseDTO